# axum-harness

./: .env.example  .gitattributes  .gitignore  .mise.toml  .prototools  .refactoring-state.yaml  .sops.yaml  .tool-versions  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  TASKS_PLAN_2_3_4.md  TEST_CHECKLIST.md  TEST_PLAN.md  bun-workspace.yaml  clippy.toml  deny.toml  lefthook.yml  moon.yml  package.json
.cargo/: config.toml
.config/: nextest.toml
.moon/: toolchains.yml  workspace.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
agent/: README.md  codemap.yml
crates/runtime_server/: Cargo.toml
crates/runtime_server/src/: lib.rs
crates/runtime_server/src/routes/: mod.rs  tenant.rs
docs/: ARCHITECTURE.md  GOAL.md  OPTIMIZATION_2026.md  PHASE_1_KICKOFF.md  PHASE_HANDOFF.md  QUICK_REFERENCE.md  README.md  REFACTORING_PLAN.md  backend-infrastructure-audit-checklist.md  counter-service-reference-chain-checklist.md  document-pruning-ab-checklist.md  gate-ci-decoupling-checklist.md  launch.md  servers-api-final-cleanup-plan.md  twiR-submission.md
e2e-desktop-playwright/: playwright.config.ts
justfiles/: README.md  build.just  clean.just  deploy.just  dev.just  gates.just  migrate.just  platform.just  processes.just  quality.just  setup.just  sops.just  test.just
qa-uat/: IMPLEMENTATION-REPORT.md  README.md  uat-checklist.md
scripts/: CROSS-PLATFORM.md  boundary-check.mjs  boundary-check.ts  dev-desktop.mjs  dev-desktop.ts  doctor.mjs  doctor.ts  gate.ts  gen-directory-categories.ts  k6-baseline.js  quick-test.mjs  quick-test.sh  run-scoped-gates.ts  test-verify.mjs  test-verify.sh  typegen.mjs  typegen.ts  validate-existence.ts  validate-imports.ts  (+4 more)
servers/gateway/: Cargo.toml  README.md  openapi.yaml
servers/gateway/src/: main.rs
(+548 files in other folders)
